  - Fixed defect #1063 Error creating XML file with r1165 & Allocine plugin
  - Fixed defect #1068 TheMovieDb API change
  - Fixed defect #1070 Local fanart, posters & videoimages for Bluray with BDMV/STREAM is not detected
  - Fixed defect #1071 r1181 does not fetch local videoimages

MovieJukebox 1.5
----------------
  - Enhancement  #154 Better handling for trailers, extras & bonus material for movies and TV series
  - Enhancement  #323 TheMovieDB.org plugin (part 1)
  - Enhancement  #455 Split HD Category into 720 and 1080
  - Enhancement  #506 Setting Video Source in NFO file
  - Enhancement  #530 Move preferences out of the XML files into preferences.xsl
  - Enhancement  #595 Manual Language Settings in nfo
  - Enhancement  #632 Disable OpenSubtitle plugin if Internet scraping is turned off in library.xml
  - Enhancement  #665 Specify technical info for video files
  - Enhancement  #686 Video Image Files created when no image found
  - Enhancement  #711 Download season Banners
  - Enhancement  #733 Local use of episode images..
  - Fixed defect #767 Link to video_ts must be case insensitive
  - Enhancement  #781 Detect the change of path for a file and update the XML
  - Enhancement  #792 Support year based seasons from thetvdb
  - Enhancement  #836 Option for AppleTrailers to include or exclude trailer types
  - Fixed defect #846 appletrailers.download is case sensitive
  - Fixed defect #850 Exception generated if Jukebox directory can't be written to
  - Fixed defect #851 TV Series dummy thumbnails
  - Fixed defect #852 Kinopoisk fix due to changed web pages
  - Fixed defect #854 m2ts files will not index correctly
  - Fixed defect #857 Apple trailer configMax is not handled correctly
  - Fixed defect #865 New API Key required for MovieMeter plugin
  - Fixed defect #868 Kinopoisk plot fix
  - Fixed defect #869 BluRay movies with multi part files are not scanned correctly
  - Fixed defect #870 MediaInfo mark subtitles YES even if the format can not be viewed